widget: Respect "bold color" even when "bold is bright" is disabled

https://bugzilla.gnome.org/show_bug.cgi?id=792501